2010-02-21
	* Click-handler for second half of code-mark.
	* update citation file according to new convention, using meta.
	
2010-02-14
	* Add click handler to version and license.
	* Move some files to inst dir to make it consistent with convention.
	* New option "both" in "type of retrieval".
	
2010-02-13
	* fix a bug in AddToCodeCategory().

2010-02-02
	* Now can rename code directly from code category popup menu.

2010-02-01
	* Improve and() and add and.Rd.
	
2010-01-29
	* better management system of code category, including new function of AddToCodeCategory().
	* change positions of code category Tab.
	* Can name a journal when save it.

2010-01-25
	* memo popup menu in code of category.
	* add subset argument to GetAtrr().
	
2010-01-19
	* 'Add to code category' popup menu in code tab.

1010-01-18
	* Now regard '' in memo field as NULL.
	
2010-01-02
	* bugfix of saveFUN4FileAttr() and ShowFileProperty().
	* Improve QueryFile() and its Rd file.
	* Bugfix of file category memo button and add tooltips.
	* setting about code mark color is no longer needed.
	
2009-12-29
	* Bugfix of saveFUN4FileAttr(). Thanks Julien Biaudet for bug
	report.
	* relation() return the index when Relation is exact.
	* Add new file of Boolean to implement boolean search and a new
	function of and().
	* change default color scheme for code mark again, 11-color scheme
	from http://colorbrewer2.org/.
	
2009-12-28
	* Rename Query to QueryFile.
	
2009-11-22
	* change default color scheme for code mark.

2009-11-08
	* fix a minor bug in SummaryCoding (Thanks Julien Biaudet)
	
2009-10-16
	* add argument to markRange and InsertAnchor to allow user-provided color.
	* markCodeFun/ViewFileFun use code-specific color to highlight the code-mark.
	* update project database structure.
	* pop-up menu for specify color for a code.

2009-10-13
	* fix bug in saveFUN4CaseAttr().

2009-10-06
	* proto of setColor function.

2009-10-04
	* fix a bug in "search files" menu.

2009-09-14 (version 0.1-8)