@@ -5,7 +5,7 @@ Version: 0.1-9
 Date: 2010-02-22
 Author: HUANG Ronggui
 Maintainer: HUANG Ronggui <ronggui.huang@gmail.com>
-Depends: R (>= 2.8.0), DBI, RSQLite, gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36),igraph
+Depends: R (>= 2.8.0), DBI, RSQLite, gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36), igraph
 Imports: RGtk2 (>= 2.12.8), methods
 Suggests: tm, tcltk
 Description: R package for Qualitative Data Analysis. Current version only supports plain text.
